[tool.poetry]
name = "repl_nix_login-test-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
views = "^0.3"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^3.0.3"
SQLAlchemy = "^2.0.11"
init = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
